// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="0">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _hascloser="" _label="Überschrift" _level="0">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="0">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="1">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _hascloser="" _label="Überschrift" _level="1">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="1">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="2">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _hascloser="" _label="Überschrift" _level="2">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="2">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="3">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _hascloser="" _label="Überschrift" _level="3">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="3">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="4">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _hascloser="" _label="Überschrift" _level="4">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="4">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="5">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _hascloser="" _label="Überschrift" _level="5">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="5">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=false 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="6">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=true 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _hascloser="" _label="Überschrift" _level="6">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="6">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" 1`] = `
<kol-card>
  <template shadowrootmode="open">
    <kol-card-wc _label="Überschrift" _level="0">
      <slot></slot>
    </kol-card-wc>
  </template>
</kol-card>
`;
